# component_scalars

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py  vdot.py  vdot_full.py
vdot/: vdot.py
