[project]
name = "vdot"
version = "0.1"
description = "A scalar product calculator"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [{name = "Danielė Stasiūnaitė"}]

[project.scripts]
vdot = "vdot.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"